<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Optimal Payments</string>
    <!-- Splash Screen -->
    <string name="splash_text">Copyright(C) 2015 Optimal Payments. All rights reserved.</string>

    <!-- CheckOut -->
    <string name="shoe">Shoe</string>
    <string name="detailslabel">Details: </string>
    <string name="details"> Comfortable sports shoe. Tap to checkout.</string>
    <string name="checkout">CheckOut</string>

    <!-- Pay Now -->
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="merchant_ref">Merchant Ref:</string>
    <string name="settlewithauth">Settle with Auth:</string>
    <string name="amount">Amount:</string>
    <string name="Pay">Pay Now</string>
    <string name="authorize">Authorize</string>
    <string name="loading_text">Please Wait...</string>
    <string name="checkbox_save_profile">Save Profile</string>
    <string name="merchant_customerid">CustomerID:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="singleusetoken">SingleUseToken:</string>
    <string name="skip">Skip</string>

    <!-- Card Details -->
    <string name="enter_your_card_details">Enter Your card details </string>
    <string name="name_on_card">Holder Name:</string>
    <string name="billing_address">Billing Address</string>
    <string name="street1">Street 1:</string>
    <string name="street2">Street 2:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="state">State:</string>
    <string name="month">Month</string>
    <string name="expiry">Expiry:</string>
    <string name="year">Year</string>
    <string name="zip">Zip:</string>
    <string name="card_no">Card No:</string>
    <string name="cvv">CVV:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <!-- Update Card -->
    <string name="update_card">Update Card</string>
    <string name="card_number">4111111111111111</string>
    <!-- CustomerVault -->
    <string name="firstuser">Create New User </string>
    <string name="lookupprofile">Existing profile</string>
     <!-- LookUPprofile -->
    <string name="profile_id">Profile ID:</string>
    <string name="merchantaccountno">1000032987</string>
    <!-- credentials single use token -->
    <string name="user_sbox">OT-16156</string>
    <string name="password_sbox">B-qa2-0-552b9bcf-0-302c02144ed8f9b8aea9d65b44b77a16a81ec5f9ab916f8c02142b4e69b3a272b866b1e263b0b0c7a925a8945418</string>

    <!-- credentials server to server -->
    <string name="user_servertoserver">devcentre4651</string>
    <string name="password_servertoserver">B-qa2-0-54b5374e-302d02147911306b5c6db4ad74e083803733163195c75ef902150095b4a21a5ea7f4c19b7b37aed1944490b59e785e</string>

    <!-- server Url authorize -->
    <string name="url_authorize">https://api.test.netbanx.com/merchantcardtestapp/v1/accounts/%s/authorizations</string>
    <!-- server Url Single Use token -->
    <string name="url_singleusetoken">https://api.test.netbanx.com/customervault/v1/singleusetokens</string>
    <!-- server Url update Card -->
    <string name="url_updatecard">https://api.test.netbanx.com/customervault/v1/profiles/</string>
    <!-- server Url lookup Profile -->
    <string name="url_lookupprofile">https://api.test.netbanx.com/customervault/v1/profiles/</string>
    <!-- Create a profile with single use token -->
    <string name="url_create_profile">https://api.test.netbanx.com/customervault/v1/profiles</string>

</resources>