<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="110dp"
                android:layout_height="30dip"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:text="@string/back"
                android:textColor="@color/button_blue_bgcolor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_TitleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/shoe"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_Shoe"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@android:color/transparent"
            android:src="@mipmap/shoe" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:text="@string/merchant_ref"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_merchantref"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@drawable/configure_edittext_selector"
                android:gravity="center"
                android:editable="false"
                android:longClickable="false"
                android:text="test_2015_323_sdfa"
                android:textColor="@android:color/black"
                android:maxLength="255"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settlewithauth"
                android:textColor="@android:color/black" />

            <Switch
                android:id="@+id/switch_settle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:text="@string/amount"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_amount"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@drawable/configure_edittext_selector"
                android:gravity="center"
                android:inputType="numberSigned"
                android:longClickable="false"
                android:text="1"
                android:maxLength="11"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/singleusetokenlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:visibility="gone" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lines="1"
                android:text="@string/singleusetoken"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_singleusetoken"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@drawable/configure_edittext_selector"
                android:gravity="center"
                android:longClickable="false"
                android:textColor="@android:color/black" />
            <!--  -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <CheckBox
                android:id="@+id/chkSaveProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_save_profile"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saveprofilelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:lines="1"
                    android:text="@string/merchant_customerid"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_merchant_customerid"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/configure_edittext_selector"
                    android:gravity="center"
                    android:hint="CustomerId"
                    android:longClickable="false"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:lines="1"
                    android:text="@string/first_name"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/configure_edittext_selector"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="John"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:lines="1"
                    android:text="@string/last_name"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/configure_edittext_selector"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="Smith"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:lines="1"
                    android:text="@string/email"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/configure_edittext_selector"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="john.smith@gmail.com"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:lines="1"
                    android:text="@string/phone"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@drawable/configure_edittext_selector"
                    android:gravity="center"
                    android:longClickable="false"
                    android:text="713-444-5555"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dip" >

            <Button
                android:id="@+id/btn_authorize"
                style="@style/BlueButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/authorize"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_Pay"
                style="@style/BlueButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:text="@string/Pay"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_skip"
                style="@style/GrayButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginLeft="20dp"
                android:text="@string/skip" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>